<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/principal"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:orientation="horizontal"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="45dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAppearance="@style/AppTheme"
        android:text="@string/autores" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="45dp"
        android:text="Diseño de Aplicaciones Móviles; 4ºGITT"
        android:textAppearance="@style/AppTheme"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center|center_vertical"
        android:shadowColor="#35287E"
        android:shadowDx="20"
        android:shadowDy="20"
        android:shadowRadius="20"
        android:text="@string/f_tbol_chapas"
        android:textAppearance="@style/AppTheme"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:fontFamily="sans-serif-black" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="Ir_Principal"
        android:text="@string/COMENZAR" />

</RelativeLayout>
